# fake-news-detector

./: .dockerignore  .floydexpt  .floydignore  .gitignore  Dockerfile  Makefile  README.md  __main__.py  download_floydhub.sh  links.csv  model.pkl  requirements.txt  robinho.py
api/: .dockerignore  .env.sample  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  deploy.sh  docker-compose.yml  elm-package.json  start.sh
api/.circleci/: config.yml
api/admin/: Links.elm  Login.elm  Main.elm  Stylesheet.elm
api/admin/Data/: Category.elm
api/dev/: postman_collection.json
api/migrations/2017-10-01-203443_create_categories/: down.sql  up.sql
api/migrations/2017-10-02-125941_create_links/: up.sql
api/migrations/2017-10-02-130231_create_votes/: down.sql  up.sql
api/migrations/2017-10-13-165149_add_not_news_category/: down.sql  up.sql
api/migrations/2017-10-23-111129_add_content_to_links/: down.sql  up.sql
api/migrations/2017-12-30-220053_add_verified_category_id_to_links/: down.sql  up.sql
api/migrations/2018-01-17-233852_create_hoaxes/: down.sql  up.sql
api/migrations/2018-01-20-211841_drop_hoaxes/: down.sql  up.sql
api/migrations/2018-03-25-125500_separate_clickbait_title/: down.sql  up.sql
api/migrations/2018-03-26-111749_add_verified_clickbait_title_and_removed/: down.sql  up.sql
api/src/: dummy.rs  jobs.rs  lib.rs  main.rs
api/src/commons/: mod.rs  pg_pool.rs  remote_ip.rs  responders.rs
api/src/data/: category.rs  link.rs  mod.rs  schema.rs  vote.rs  (+1 more)
api/tests/: admin_test.rs  healthcheck_test.rs  index_test.rs
(+192 files in other folders)
